Sometimes selecting bones is a nightmare #62990

Closed
opened 2019-03-27 06:13:13 +01:00 by Jorge Molina · 12 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: AMD Radeon (TM) R9 390 Series ATI Technologies Inc. 4.5.13547 Core Profile Context 25.20.15027.1003

Blender Version
Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 23:15, hash: adfdae3fc2
Worked: (optional)

Short description of error
Sometimes I can't select bones

Exact steps for others to reproduce the error
Sometimes Blender simply decides not to let me select bones. As you can see in the video I wasn't able to select the bones until I switched the armature to object mode and then back to pose mode. The video doesn't have sound, but you can clearly see that I am trying to select different bones and I couldn't do it. It does this quite often. Also, even though I was able to select the bones in the end, you can see that Blender was very laggy too when performing the action.

Issue #1 Can't select bones.mp4

Another annoying thing is that when I want to go from selecting a bone to selecting a mesh, Blender selects the entire armature in object mode automatically before letting me select another mesh. This is really annoying. This didn't happen in Blender 2.7x. (video below).

issue #2.mp4

Thank you,

Jorge

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: AMD Radeon (TM) R9 390 Series ATI Technologies Inc. 4.5.13547 Core Profile Context 25.20.15027.1003 **Blender Version** Broken: version: 2.80 (sub 51), branch: blender2.7, commit date: 2019-03-25 23:15, hash: `adfdae3fc2` Worked: (optional) **Short description of error** Sometimes I can't select bones **Exact steps for others to reproduce the error** Sometimes Blender simply decides not to let me select bones. As you can see in the video I wasn't able to select the bones until I switched the armature to object mode and then back to pose mode. The video doesn't have sound, but you can clearly see that I am trying to select different bones and I couldn't do it. It does this quite often. Also, even though I was able to select the bones in the end, you can see that Blender was very laggy too when performing the action. [Issue #1 Can't select bones.mp4](https://archive.blender.org/developer/F6889156/Issue__1_Can_t_select_bones.mp4) Another annoying thing is that when I want to go from selecting a bone to selecting a mesh, Blender selects the entire armature in object mode automatically before letting me select another mesh. This is really annoying. This didn't happen in Blender 2.7x. (video below). [issue #2.mp4](https://archive.blender.org/developer/F6889162/issue__2.mp4) Thank you, Jorge
Author

Added subscriber: @JorgeMolina

Added subscriber: @JorgeMolina

Added subscriber: @brecht

Added subscriber: @brecht

We need exact steps to redo based on a . blend file.

We need exact steps to redo based on a . blend file.
Author

Hello,

I could give you the blend file that I used to make the videos. but the problem is that Blender does this randomly (Except for issue #2, that one happens all the time), even for me it's hard to replicate this issue. My theory is that if the mesh is complex, Blender blocks the armature. This character, for instance, has several boolean modifiers and that could be causing some issues. Here is the .blend file.

funnyCharacter_rig.blend

Hello, I could give you the blend file that I used to make the videos. but the problem is that Blender does this randomly (Except for issue #2, that one happens all the time), even for me it's hard to replicate this issue. My theory is that if the mesh is complex, Blender blocks the armature. This character, for instance, has several boolean modifiers and that could be causing some issues. Here is the .blend file. [funnyCharacter_rig.blend](https://archive.blender.org/developer/F6890823/funnyCharacter_rig.blend)

Edit > Lock Object Modes is disabled in this file, the default is to have it enabled. I guess that is related.

Selection is indeed sluggish here as well.

Edit > Lock Object Modes is disabled in this file, the default is to have it enabled. I guess that is related. Selection is indeed sluggish here as well.

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2019-03-28 12:44:29 +01:00

I can confirm that the selection is very slow for me as well. It seem to be related to the boolean modifiers on the mesh as the selection times becomes shorter the more of them I remove. And with no boolean modifers at all, the selection times is fast and what I would expect.

I can confirm that the selection is very slow for me as well. It seem to be related to the boolean modifiers on the mesh as the selection times becomes shorter the more of them I remove. And with no boolean modifers at all, the selection times is fast and what I would expect.
Author

Okay, that is fine, I tested it and the selection was fine after removing the boolean modifiers. However, is there any reason for issue #2 (second video)? Why do the armature switch from pose mode to object mode when trying to select the mesh after having selected a bone?

Okay, that is fine, I tested it and the selection was fine after removing the boolean modifiers. However, is there any reason for issue #2 (second video)? Why do the armature switch from pose mode to object mode when trying to select the mesh after having selected a bone?

It's because "Edit > Lock Object Modes" was disabled in this file. If you enable that it stays in the same mode no matter where you click.

It's because "Edit > Lock Object Modes" was disabled in this file. If you enable that it stays in the same mode no matter where you click.
Author

I understand. But my intention is not to lock the mode to pose mode. I actually would like to be able to go from selecting a bone to selecting the mesh smoothly like in 2.7. I enabled the "Lock Object Modes", but then I wasn't able to select the mesh anymore. This is very useful for certain occasions. I get the point of it, but if this setting is not enable, I think the user should be able to select a bone and then at any time select the mesh with just one click, versus two clicks. Right now, the workflow is: you select a bone, then to select the mesh you click on the mesh, but when you right click on the mesh, the armature switches to object mode first, and then you have to click on the mesh a second time in order to select it. It feels like too many steps. I am using right click selection by the way :)

I understand. But my intention is not to lock the mode to pose mode. I actually would like to be able to go from selecting a bone to selecting the mesh smoothly like in 2.7. I enabled the "Lock Object Modes", but then I wasn't able to select the mesh anymore. This is very useful for certain occasions. I get the point of it, but if this setting is not enable, I think the user should be able to select a bone and then at any time select the mesh with just one click, versus two clicks. Right now, the workflow is: you select a bone, then to select the mesh you click on the mesh, but when you right click on the mesh, the armature switches to object mode first, and then you have to click on the mesh a second time in order to select it. It feels like too many steps. I am using right click selection by the way :)
Sebastian Parborg removed their assignment 2019-06-24 18:34:34 +02:00
Sergey Sharybin was assigned by Sebastian Parborg 2019-06-24 18:34:34 +02:00

This issue was referenced by eac11046a1

This issue was referenced by eac11046a151dd1dfc175f2c3faf00a3baa99956

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62990
No description provided.