Fix T62990: Selecting bones causes pose to be re-evaluated